force-app/main/default/objects/OrgSync_ASPN_Staging__c/OrgSync_ASPN_Staging__c.object-meta.xml
<CustomObject>
    <label>ASPN Staging</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ASPN Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASPN Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>