force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Address__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>