force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_ASPN_Rx_Chase_Consent__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ASPN_Rx_Chase_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASPN Rx Chase Consent</label>
    <type>Checkbox</type>
</CustomField>