force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Assigned_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned On</label>
    <type>Date</type>
</CustomField>