force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Batch_Status__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>