force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Campaign_Codes__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Campaign_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>