force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_City__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>