force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Copay_Card_Applied__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Copay_Card_Applied__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Card Applied</label>
    <length>1</length>
    <type>Text</type>
</CustomField>