force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Days_Supply__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Days_Supply__c</fullName>
    <label>Days Supply</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>