force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Diabetes_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Diabetes_Type__c</fullName>
    <label>Diabetes Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Gestational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>