force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_DOB__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_DOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOB</label>
    <type>Date</type>
</CustomField>