force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Doctor_Fax__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Doctor_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doctor Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>