force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Doctor_NPI__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Doctor_NPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doctor NPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>