force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Doctor_Specialty__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Doctor_Specialty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doctor Specialty</label>
    <length>150</length>
    <type>Text</type>
</CustomField>