force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Doctor_Street__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Doctor_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doctor Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>