force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Doctor_Zip__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Doctor_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doctor Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>