force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_External_ASPNID__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_External_ASPNID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ASPNID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>