force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_External_Source__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_External_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>