force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Fill_Number__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Fill_Number__c</fullName>
    <label>Fill Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>