force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Fill_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Fill_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fill Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>