force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Filling_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Filling_Pharmacy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filling Pharmacy</label>
    <length>150</length>
    <type>Text</type>
</CustomField>