force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Filling_Pharmacy_City__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Filling_Pharmacy_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filling Pharmacy City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>