force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Final_Copay__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Final_Copay__c</fullName>
    <label>Final Copay</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>