force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Free_Trial_Consent__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Free_Trial_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Trial Consent</label>
    <type>Checkbox</type>
</CustomField>