force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Free_Trial_Copay_Card_member_ID__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Free_Trial_Copay_Card_member_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Free Trial Copay Card member ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>