force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Insurance_Name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Insurance_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>