force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>