force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Lead_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>