force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_PA_Outcome__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PA_Outcome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PA Outcome</label>
    <length>150</length>
    <type>Text</type>
</CustomField>