force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_PA_Required__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PA_Required__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PA Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>