force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Patient__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ASPN Stagings</relationshipLabel>
    <relationshipName>ASPN_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>