force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Patient_First_name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Patient_First_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient First name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>