force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Patient_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>