force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Patient_Option_Selection__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Patient_Option_Selection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Option Selection</label>
    <length>150</length>
    <type>Text</type>
</CustomField>