force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_PCN__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_PCN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>