force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Pharmacy_Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Pharmacy_Insurance_Type__c</fullName>
    <label>Pharmacy Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
            <value>
                <fullName>Cash Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>