force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Pharmacy_memberID__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Pharmacy_memberID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy memberID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>