force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>