force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Postal_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>