force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Preferred_Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>