force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Program__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>