force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Program_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>