force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Referral_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Referral_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Create Date</label>
    <type>Date</type>
</CustomField>