force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Referral_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>