force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Referral_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>