force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Refills_Authorized__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Refills_Authorized__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refills Authorized</label>
    <length>4</length>
    <type>Text</type>
</CustomField>