force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Reports_To_District_Manager__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Reports_To_District_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reports To (District Manager)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>