force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In_Progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Partial Matches</fullName>
            </value>
            <value>
                <fullName>Dupe Review - New</fullName>
            </value>
            <value>
                <fullName>System_Match</fullName>
                <label>System Match</label>
            </value>
            <value>
                <fullName>Dupe_Backlog</fullName>
                <label>Dupe Backlog</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>