force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Rx_Bin__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Rx_Bin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Bin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>