force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Sales_Rep_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>