force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Sales_Rep_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>