force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>