force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>