force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_SMS_Retail_Confirmation_Response__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_SMS_Retail_Confirmation_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Retail Confirmation Response</label>
    <length>150</length>
    <type>Text</type>
</CustomField>