force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_SourceID__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_SourceID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SourceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>