force-app/main/default/objects/OrgSync_ASPN_Staging__c/fields/OrgSync_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>